--- a/cybersec_index/data_1.properties
+++ b/cybersec_index/data_1.properties
@@ -1,16 +1,16 @@
 #C:\Nexus\Programs\utsuk_ibs_theme8\cybersec_index/data_1.properties
-#Tue Jun 03 20:10:12 IST 2025
-index.created=1748957931723
+#Wed Jun 04 11:24:21 IST 2025
+index.created=1749015067266
 index.direct-inputstream.class=org.terrier.structures.bit.BitPostingIndexInputStream
 index.direct-inputstream.parameter_types=org.terrier.structures.IndexOnDisk,java.lang.String,java.util.Iterator,java.lang.Class
-index.direct-inputstream.parameter_values=index,structureName,document-inputstream,org.terrier.structures.postings.bit.BasicIterablePosting
-index.direct.blocks=0
-index.direct.blocks.max=0
+index.direct-inputstream.parameter_values=index,structureName,document-inputstream,org.terrier.structures.postings.bit.BlockIterablePosting
+index.direct.blocks=1
+index.direct.blocks.max=100000
 index.direct.class=org.terrier.structures.bit.BitPostingIndex
 index.direct.fields.count=0
 index.direct.fields.names=
 index.direct.parameter_types=org.terrier.structures.IndexOnDisk,java.lang.String,java.lang.Class
-index.direct.parameter_values=index,structureName,org.terrier.structures.postings.bit.BasicIterablePosting
+index.direct.parameter_values=index,structureName,org.terrier.structures.postings.bit.BlockIterablePosting
 index.document-factory.class=org.terrier.structures.BasicDocumentIndexEntry$Factory
 index.document-factory.parameter_types=
 index.document-factory.parameter_values=
@@ -22,14 +22,14 @@ index.document.parameter_types=org.terrier.structures.IndexOnDisk,java.lang.Stri
 index.document.parameter_values=index,structureName
 index.inverted-inputstream.class=org.terrier.structures.bit.BitPostingIndexInputStream
 index.inverted-inputstream.parameter_types=org.terrier.structures.IndexOnDisk,java.lang.String,java.util.Iterator,java.lang.Class
-index.inverted-inputstream.parameter_values=index,structureName,lexicon-entry-inputstream,org.terrier.structures.postings.bit.BasicIterablePosting
-index.inverted.blocks=0
-index.inverted.blocks.max=0
+index.inverted-inputstream.parameter_values=index,structureName,lexicon-entry-inputstream,org.terrier.structures.postings.bit.BlockIterablePosting
+index.inverted.blocks=1
+index.inverted.blocks.max=100000
 index.inverted.class=org.terrier.structures.bit.BitPostingIndex
 index.inverted.fields.count=0
 index.inverted.fields.names=
 index.inverted.parameter_types=org.terrier.structures.IndexOnDisk,java.lang.String,java.lang.Class
-index.inverted.parameter_values=index,structureName,org.terrier.structures.postings.bit.BasicIterablePosting
+index.inverted.parameter_values=index,structureName,org.terrier.structures.postings.bit.BlockIterablePosting
 index.lexicon-entry-inputstream.class=org.terrier.structures.FSOMapFileLexicon$MapFileLexiconEntryIterator
 index.lexicon-entry-inputstream.parameter_types=java.lang.String,org.terrier.structures.IndexOnDisk
 index.lexicon-entry-inputstream.parameter_values=structureName,index
@@ -52,19 +52,19 @@ index.meta-inputstream.parameter_types=org.terrier.structures.IndexOnDisk,java.l
 index.meta-inputstream.parameter_values=index,structureName
 index.meta.class=org.terrier.structures.ZstdCompressedMetaIndex
 index.meta.data-source=fileinmem
-index.meta.entries=1
-index.meta.entry-length=986909
+index.meta.entries=124
+index.meta.entry-length=33012
 index.meta.index-source=fileinmem
-index.meta.key-names=docno,text
+index.meta.key-names=docno,text,title,source_file,chunk_id,doc_id
 index.meta.parameter_types=org.terrier.structures.IndexOnDisk,java.lang.String
 index.meta.parameter_values=index,structureName
 index.meta.reverse-key-names=docno
-index.meta.value-lengths=50,328918
-index.meta.value-sorted=true,true
+index.meta.value-lengths=100,10000,300,500,50,50
+index.meta.value-sorted=false,false,false,false,false,false
 index.terrier.version=5.11
 max.term.length=20
-num.Documents=1
-num.Pointers=6401
-num.Terms=6401
-num.Tokens=37270
+num.Documents=124
+num.Pointers=10915
+num.Terms=6391
+num.Tokens=36988
 termpipelines=Stopwords,PorterStemmer
